Enchanted Keyfinder (EK) Changelog
Build 0.1.0.260 Beta 4 -- January 21st, 2011
----------------------------------
1.	Added support for retrieving Microsoft Office 2010 installation
	key.
2.	Added update support for live downloading of unstable versions.
	Falls back to to giving the user the option to manually download
	it.
3.	Enhanced downloading of the keyfinder.cfg.  If it fails it falls
	back to giving the user the option to manually download it.
4.	Fixed bug #3163261 Load Hive doesn't work.  Now it works more
	reliably.
5.	Fixed a minor UI bug when pressing cancel after clicking Load Hive
	menu.  Hive status messages did not go away.

Build 0.1.0.209 Beta 3 -- January 20th, 2011
----------------------------------
1.	Added icons to the menus.
2.	Implmented online updates to ease the process of checking for a new
	version.

Build 0.1.0.142 Beta 2 -- January 18th, 2011
----------------------------------
1.	Added Refresh to File menu for when users are testing config file.
2.	Updated feature: Modified the XP change product key feature so you 
	don't have to restart keyfinder to see the updated key.
3.	Updated About dialog with new logo and information.
4.	Fixed bug where EK would fail from invalide data type when reading 
	strings from the registry.  This would cause an incomplete list of 
	found keys.
5.	Fixed bug where programs with blank keys, such as Half-Life, would 
	show up even when it is not installed.
6.	Updated cfg file.

Build 0.1.0.84 Beta -- January 18th, 2011
----------------------------------
1.	Spelling correction for Arzoroc.

Build 0.1.0.82 Beta -- January 17th, 2011
----------------------------------
1.	New Feature: Windows XP Product Key can be changed using EK.
2.	New Feature: All settings are now saved and loaded from an INI 
	file.  Now EK is portable.
3.	Changed Feature: Settings dialog has changed.  Now settings 
	auto-save to an INI file.  To restore default settings, simply 
	delete the INI file.