@@ -1,4 +1,9 @@
 Enchanted Keyfinder (EK) Changelog
+Build xxxxxx -- xxxxxxx
+----------------------------------
+1.	Added MS Office product description derived from the GUID.  
+	Affects Office 2000 through Office 2010.
+
 Build 0.1.0.260 Beta 4 -- January 21st, 2011
 ----------------------------------
 1.	Added support for retrieving Microsoft Office 2010 installation
